Adjusted css for header nav bar to make sure it is centered on mobile.

--- a/src/features/layout/header/header.module.css
+++ b/src/features/layout/header/header.module.css
@@ -48,6 +48,7 @@
     display: inline-flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-content: center;
     vertical-align: middle;
 }
 
